@@ -17,7 +17,11 @@ Bug fixes:
 	* Fixed copy&paste and duplication of box and bar plots
 	* Fixed issues with loading object's templates (BUG 470003)
 	* Don't crash when loading projects with reference ranges
-	* .xlsx import: Fix crash importing empty cells
+	* .xlsx import:
+		* Fix crash importing empty cells
+		* support datetime import (Issue #531)
+	* Properly set the initial properties of the reference line like line width, etc. (Issue #580)
+	* Properly show the initial value of the property "visible" for the reference range (Issue #582)
 
 -----2.10.0 (21.03.2023) -----
 New features:
